finally spaced out nav correctly, buttons, and other material workin on mobile next

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 .btn {
-  padding: 10px 40px;
+  width: 75%;
+  padding: 10px 30px;
   border-radius: 10px;
   background-color: teal;
   color: white;
@@ -143,14 +144,14 @@ html {
 }
 html,
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: 'Indie Flower', cursive;
+  font-family: "Indie Flower", cursive;
 }
 h1 {
   font-size: 4rem;
@@ -177,13 +178,13 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-.nav-bar {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+header {
   border-bottom: 2px dashed #C0C0C0;
-  padding: 50px;
+}
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  padding: 3% 0;
 }
 @media (max-width: 500px) {
   .nav-bar {
@@ -191,13 +192,18 @@ img {
     text-align: center;
   }
 }
-.nav-bar a {
+.nav-bar .links {
+  display: flex;
+  justify-content: space-between;
+  width: 40%;
+}
+.nav-bar .links a {
   font-size: 15px;
   text-decoration: none;
   color: black;
 }
 @media (max-width: 500px) {
-  .nav-bar a {
+  .nav-bar .links a {
     align-content: center;
   }
 }
@@ -258,8 +264,12 @@ img {
   width: 30%;
   margin-bottom: 30px;
 }
+.content-welcome {
+  border-bottom: 2px dashed #C0C0C0;
+}
 .btn {
-  padding: 10px 40px;
+  width: 75%;
+  padding: 10px 30px;
   border-radius: 10px;
   background-color: teal;
   color: white;
