--- a/less/home-page.less
+++ b/less/home-page.less
@@ -56,6 +56,9 @@
     }
   }
 } // home
+.content-welcome {
+  border-bottom: 2px dashed @navigation-border;
+}
 
 .btn {
   .btn();
