--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,7 +3,8 @@
 @mobile: ~"(max-width: 500px)";
 
 .btn {
-  padding: 10px 40px;
+  width: 75%;
+  padding: 10px 30px;
   border-radius: 10px;
   background-color: teal;
   color: white;
