--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,22 +1,28 @@
 // Navigation Styles here
-
-.nav-bar {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+header {
   border-bottom: 2px dashed @navigation-border;
-  padding: 50px;
+}
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  padding: 3% 0;
   @media @mobile {
     flex-direction: column;
     text-align: center;
   }
-  a {
-    font-size: 15px;
-    text-decoration: none;
-    color: black;
-    @media @mobile {
-      align-content: center;
+  .h1-content {
+  }
+  .links {
+    display: flex;
+    justify-content: space-between;
+    width: 40%;
+    a {
+      font-size: 15px;
+      text-decoration: none;
+      color: black;
+      @media @mobile {
+        align-content: center;
+      }
     }
   }
 }
